Update photo path for cross OS compatibility